tests/csmith/bad/smith000068.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 68
 * Seed:      68
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
struct S1 {
   int16_t  f0;
    const  volatile uint8_t  f1;
    volatile int8_t  f2;
    const int64_t  f3;
};

struct S3 {
    volatile uint32_t  f0;
   struct S1  f1;
};

struct S4 {
    volatile int16_t  f0;
   struct S3  f1;
   struct S1  f2;
};

/* --- GLOBAL VARIABLES --- */
struct S4 g_2 = {0xAC04L,{0L,{3L,1L,0x5BL,7L}},{1L,0xBCL,0x70L,4L}};/* VOLATILE GLOBAL g_2 */


/* --- FORWARD DECLARATIONS --- */
struct S4  func_1(void);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_2
 * writes:
 */
struct S4  func_1(void)
{ /* block id: 0 */
    return g_2;
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    func_1();
    printf("checksum g_2.f0 = %d\n", g_2.f0);
    printf("checksum g_2.f1.f0 = %d\n", g_2.f1.f0);
    printf("checksum g_2.f1.f1.f0 = %d\n", g_2.f1.f1.f0);
    printf("checksum g_2.f1.f1.f1 = %d\n", g_2.f1.f1.f1);
    printf("checksum g_2.f1.f1.f2 = %d\n", g_2.f1.f1.f2);
    printf("checksum g_2.f1.f1.f3 = %d\n", g_2.f1.f1.f3);
    printf("checksum g_2.f2.f0 = %d\n", g_2.f2.f0);
    printf("checksum g_2.f2.f1 = %d\n", g_2.f2.f1);
    printf("checksum g_2.f2.f2 = %d\n", g_2.f2.f2);
    printf("checksum g_2.f2.f3 = %d\n", g_2.f2.f3);
}

/************************ statistics *************************
XXX max struct depth: 4
breakdown:
   depth: 0, occurrence: 0
   depth: 1, occurrence: 0
   depth: 2, occurrence: 0
   depth: 3, occurrence: 0
   depth: 4, occurrence: 1

XXX max expression depth: 0
breakdown:
   depth: 0, occurrence: 1

XXX total number of pointers: 0

XXX times a non-volatile is read: 1
XXX times a non-volatile is write: 0
XXX times a volatile is read: 0
XXX    times read thru a pointer: 0
XXX times a volatile is write: 0
XXX    times written thru a pointer: 0
XXX times a volatile is available for access: 0
XXX percentage of non-volatile access: 100

XXX forward jumps: 0
XXX backward jumps: 0

XXX stmts: 2

XXX percentage a fresh-made variable is used: 100
XXX percentage an existing variable is used: 0
********************* end of statistics **********************/

